opam-version: "1.2"
authors: "Andrew Ray <andy.ray@ujamjar.com>"
maintainer: "andy.ray@ujamjar.com"
homepage: "https://github.com/andrewray/iocamlserver"
dev-repo: "https://github.com/andrewray/iocamlserver.git"
bug-reports: "https://github.com/andrewray/iocamlserver/issues"
build: [
  ["jbuilder" "subst" "-n" name] {pinned}
  ["jbuilder" "build" "-p" name "-j" jobs]
]
build-test: [["jbuilder" "runtest" "-p" name "-j" jobs]]
depends: [
  "jbuilder" {build & >= "1.0+beta10"}
  "uuidm"
  "mustache"
  "yojson"
  "lwt" {>= "2.4"}
  "websocket" {>= "2.0"}
  "cohttp" {>= "0.21.0"}
  "crunch"
  "ctypes" {>= "0.3"}
  "ctypes-foreign"
  "iocaml-kernel" {= "0.4.8"}
  "iocamljs-kernel" {= "0.4.8"}
]
available: [ ocaml-version >= "4.02.3" ]

